feat: add option for system theme

--- a/src/locales/de.json
+++ b/src/locales/de.json
@@ -1,33 +1,38 @@
 {
   "use-popup": "Popup benutzen",
-  "use-popup-description": "Wenn diese Option aktiviert ist, wird die Erweiterung in einem Popup angezeigt.",
+  "use-popup-description": "Wenn diese Option aktiviert ist, wird die Erweiterung in einem Popup angezeigt",
   "use-dark-mode": "Dunklen Modus benutzen",
-  "use-dark-mode-description": "Wenn diese Option aktiviert ist, wird die Erweiterung im dunklen Modus angezeigt.",
+  "use-dark-mode-description": "Wenn diese Option aktiviert ist, wird die Erweiterung im dunklen Modus angezeigt",
   "auto-import-dois": "DOI(s) automatisch importieren",
-  "auto-import-dois-description": "Wenn diese Option aktiviert ist, werden DOI(s) automatisch auf der geöffneten Seite erkannt und importiert.",
+  "auto-import-dois-description": "Wenn diese Option aktiviert ist, werden DOI(s) automatisch auf der geöffneten Seite erkannt und importiert",
   "general": "Allgemein",
   "download-report-pdf": "Bericht als PDF herunterladen",
-  "doi-found-metadata": "Der DOI wurde gefunden und die Metadaten wurden erfolgreich aus der Crossref-Datenbank abgerufen.",
-  "doi-found-no-metadata": "Der DOI wurde gefunden, aber die Metadaten konnten nicht aus der Crossref-Datenbank abgerufen werden.",
+  "doi-found-metadata": "Der DOI wurde gefunden und die Metadaten wurden erfolgreich aus der Crossref-Datenbank abgerufen",
+  "doi-found-no-metadata": "Der DOI wurde gefunden, aber die Metadaten konnten nicht aus der Crossref-Datenbank abgerufen werden",
   "doi-not-found": "Der DOI wurde nicht gefunden. Mögliche Gründe sind:",
-  "doi-incorrect": "Der DOI ist in Ihrer Quelle falsch.",
-  "doi-incorrect-extraced": "Der DOI wurde falsch extrahiert.",
-  "doi-not-activated": "Der DOI wurde noch nicht aktiviert.",
+  "doi-incorrect": "Der DOI ist in Ihrer Quelle falsch",
+  "doi-incorrect-extraced": "Der DOI wurde falsch extrahiert",
+  "doi-not-activated": "Der DOI wurde noch nicht aktiviert",
   "open-work": "Das Werk in einem neuen Tab öffnen",
   "no-works-found": "Es konnten keine passenden Literaturangaben anhand der bereitgestellten DOI(s) gefunden werden. Bitte überprüfen Sie die DOI-Einträge auf Richtigkeit. Eine korrekte Formatierung und Vollständigkeit kann die Suchergebnisse verbessern.",
-  "no-match": "Wir konnten keine Übereinstimmung finden.",
+  "no-match": "Wir konnten keine Übereinstimmung finden",
   "connection-problem": "Es könnte ein Problem mit Ihrer Verbindung geben. Bitte überprüfen Sie Ihre Internetverbindung.",
   "refresh-page-auto-import": "Seite aktualisieren, um DOI(s) automatisch zu importieren",
   "insert-dois": "DOI(s) einfügen",
   "english": "Englisch",
   "german": "Deutsch",
   "language": "Sprache",
-  "language-option-description": "Wählen Sie die Sprache der Erweiterung.",
+  "language-option-description": "Wählen Sie die Sprache der Erweiterung",
   "found": "Gefunden",
   "passed": "Bestanden",
   "warning": "Warnung",
   "failed": "Fehlgeschlagen",
   "report": "Bericht",
   "copy-doi": "DOI kopieren",
-  "doi-copied": "DOI kopiert"
+  "doi-copied": "DOI kopiert",
+  "theme": "Design",
+  "theme-option-description": "Wählen Sie das Design der Erweiterung",
+  "light": "Hell",
+  "dark": "Dunkel",
+  "system": "System"
 }
