fix: update state

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -37,6 +37,9 @@
   "dark": "Dark",
   "system": "System",
   "display": "Display",
-  "reload-page": "Reload page"
-
+  "reload-page": "Reload page",
+  "no-valid-dois-were-found": "No valid DOIs were found",
+  "no-input-provided": "No Input Provided",
+  "enter-dois": "Please enter one or more DOIs to search for matching literature.",
+  "check-dois": "Please check the format and ensure accuracy to improve search results."
 }
