--- a/src/locales/de.json
+++ b/src/locales/de.json
@@ -36,5 +36,9 @@
   "dark": "Dunkel",
   "system": "System",
   "display": "Darstellung",
-  "reload-page": "Seite neu laden"
+  "reload-page": "Seite neu laden",
+  "no-valid-dois-were-found": "Es wurden keine gültigen DOIs gefunden",
+  "no-input-provided": "Keine Eingabe bereitgestellt",
+  "enter-dois": "Bitte geben Sie einen oder mehrere DOIs ein, um passende Literatur zu suchen.",
+  "check-dois": "Bitte überprüfen Sie das Format und stellen Sie die Richtigkeit sicher, um die Suchergebnisse zu verbessern."
 }
