feat: added pdf auto import

--- a/src/locales/de.json
+++ b/src/locales/de.json
@@ -41,5 +41,7 @@
   "no-input-provided": "Keine Eingabe bereitgestellt",
   "enter-dois": "Bitte geben Sie einen oder mehrere DOIs ein, um passende Literatur zu suchen.",
   "check-dois": "Bitte überprüfen Sie das Format und stellen Sie die Richtigkeit sicher, um die Suchergebnisse zu verbessern.",
-  "uploadPDF": "PDF-Datei hochladen"
+  "upload-pdf": "PDF-Datei hochladen",
+  "enter-url": "URL eingeben",
+  "invalid-url": "Ungültige URL"
 }
