--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -42,5 +42,8 @@
   "no-input-provided": "No Input Provided",
   "enter-dois": "Please enter one or more DOIs to search for matching literature.",
   "check-dois": "Please check the format and ensure accuracy to improve search results.",
-  "uploadPDF": "Upload PDF"
+  "upload-pdf": "Upload PDF",
+  "enter-url": "Enter URL",
+  "invalid-url": "Invalid URL"
+
 }
