--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -44,6 +44,8 @@
   "check-dois": "Please check the format and ensure accuracy to improve search results.",
   "upload-pdf": "Upload PDF",
   "enter-url": "Enter URL",
-  "invalid-url": "Invalid URL"
+  "invalid-url": "Invalid URL",
+  "about": "About",
+  "version": "Version"
 
 }
