refactor(report): rename 'passed' to 'valid' for clarity and update related translations

--- a/src/locales/de.json
+++ b/src/locales/de.json
@@ -24,7 +24,7 @@
   "language": "Sprache",
   "language-option-description": "Wählen Sie die Sprache der Erweiterung",
   "found": "Gefunden",
-  "passed": "Bestanden",
+  "valid": "Gültig",
   "warning": "Warnung",
   "failed": "Fehlgeschlagen",
   "report": "Bericht",
