--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -25,7 +25,7 @@
   "language": "Language",
   "language-option-description": "Select the language of the extension",
   "found": "Found",
-  "passed": "Passed",
+  "valid": "Valid",
   "warning": "Warning",
   "failed": "Failed",
   "report": "Report",
