refactor(report): rename 'warning' to 'incomplete' for improved clarity and update related logic and translations

--- a/src/locales/de.json
+++ b/src/locales/de.json
@@ -25,7 +25,7 @@
   "language-option-description": "Wählen Sie die Sprache der Erweiterung",
   "found": "Gefunden",
   "valid": "Gültig",
-  "warning": "Warnung",
+  "incomplete": "Unvollständig",
   "failed": "Fehlgeschlagen",
   "report": "Bericht",
   "copy-doi": "DOI kopieren",
