refactor(report): rename 'failed' to 'invalid' for improved clarity and update related logic and translations

--- a/src/locales/de.json
+++ b/src/locales/de.json
@@ -26,7 +26,7 @@
   "found": "Gefunden",
   "valid": "Gültig",
   "incomplete": "Unvollständig",
-  "failed": "Fehlgeschlagen",
+  "invalid": "Ungültig",
   "report": "Bericht",
   "copy-doi": "DOI kopieren",
   "doi-copied": "DOI kopiert",
