--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -6,7 +6,7 @@
   "auto-import-dois": "Auto-import DOI(s)",
   "auto-import-dois-description": "When this option is enabled, DOI(s) are automatically detected and imported on the open page",
   "general": "General",
-  "download-report-pdf": "Bericht als PDF herunterladen",
+  "download-report-pdf": "Download report as PDF",
   "doi-found-metadata": "The DOI was found and the metadata was successfully retrieved from the Crossref-Database",
   "doi-found-no-metadata": "The DOI was found but the metadata could not be retrieved from the Crossref-Database",
   "doi-not-found": "The DOI was not found. Possible reasons are:",
