chore(i18n): update PDF upload terminology to 'import' in English and German translations

--- a/src/locales/de.json
+++ b/src/locales/de.json
@@ -41,7 +41,7 @@
   "no-input-provided": "Keine Eingabe bereitgestellt",
   "enter-dois": "Bitte geben Sie einen oder mehrere DOIs ein, um passende Literatur zu suchen.",
   "check-dois": "Bitte überprüfen Sie das Format und stellen Sie die Richtigkeit sicher, um die Suchergebnisse zu verbessern.",
-  "upload-pdf": "PDF-Datei hochladen",
+  "upload-pdf": "PDF-Datei importieren",
   "enter-url": "URL eingeben",
   "invalid-url": "Ungültige URL",
   "about": "Über",
