refactor(report): simplify status handling and remove incomplete checks

--- a/src/locales/de.json
+++ b/src/locales/de.json
@@ -7,6 +7,8 @@
   "auto-import-dois-description": "Wenn diese Option aktiviert ist, werden DOI(s) automatisch auf der geöffneten Seite erkannt und importiert",
   "general": "Allgemein",
   "download-report-pdf": "Bericht als PDF herunterladen",
+  "valid-description": "Der DOI ist gültig",
+  "invalid-description": "Der DOI ist ungültig. Bitte überprüfen Sie den DOI auf Richtigkeit",
   "doi-found-metadata": "Der DOI wurde gefunden und die Metadaten wurden erfolgreich aus der Crossref-Datenbank abgerufen",
   "doi-found-no-metadata": "Der DOI wurde gefunden, aber die Metadaten konnten nicht aus der Crossref-Datenbank abgerufen werden",
   "doi-not-found": "Der DOI wurde nicht gefunden. Mögliche Gründe sind:",
@@ -25,7 +27,6 @@
   "language-option-description": "Wählen Sie die Sprache der Erweiterung",
   "found": "Gefunden",
   "valid": "Gültig",
-  "incomplete": "Unvollständig",
   "invalid": "Ungültig",
   "report": "Bericht",
   "copy-doi": "DOI kopieren",
