--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -7,6 +7,8 @@
   "auto-import-dois-description": "When this option is enabled, DOI(s) are automatically detected and imported on the open page",
   "general": "General",
   "download-report-pdf": "Download report as PDF",
+  "valid-description": "The DOI is valid",
+  "invalid-description": "The DOI is invalid. Please check the DOI for accuracy",
   "doi-found-metadata": "The DOI was found and the metadata was successfully retrieved from the Crossref-Database",
   "doi-found-no-metadata": "The DOI was found but the metadata could not be retrieved from the Crossref-Database",
   "doi-not-found": "The DOI was not found. Possible reasons are:",
@@ -26,7 +28,6 @@
   "language-option-description": "Select the language of the extension",
   "found": "Found",
   "valid": "Valid",
-  "incomplete": "Incomplete",
   "invalid": "Invalid",
   "report": "Report",
   "copy-doi": "Copy DOI",
