chore: update icons and improve localization strings in English and German

--- a/src/locales/de.json
+++ b/src/locales/de.json
@@ -1,26 +1,18 @@
 {
-  "use-popup": "Popup benutzen",
-  "use-popup-description": "Wenn diese Option aktiviert ist, wird die Erweiterung in einem Popup angezeigt",
-  "use-dark-mode": "Dunklen Modus benutzen",
-  "use-dark-mode-description": "Wenn diese Option aktiviert ist, wird die Erweiterung im dunklen Modus angezeigt",
-  "auto-import-dois": "DOI(s) automatisch importieren",
-  "auto-import-dois-description": "Wenn diese Option aktiviert ist, werden DOI(s) automatisch auf der geöffneten Seite erkannt und importiert",
+  "auto-import-dois": "DOIs automatisch importieren",
+  "auto-import-dois-description": "Wenn diese Option aktiviert ist, werden DOIs automatisch auf der geöffneten Seite erkannt und importiert",
   "general": "Allgemein",
   "download-report-pdf": "Bericht als PDF herunterladen",
-  "valid-description": "Der DOI ist gültig",
-  "invalid-description": "Der DOI ist ungültig. Bitte überprüfen Sie den DOI auf Richtigkeit",
-  "doi-found-metadata": "Der DOI wurde gefunden und die Metadaten wurden erfolgreich aus der Crossref-Datenbank abgerufen",
-  "doi-found-no-metadata": "Der DOI wurde gefunden, aber die Metadaten konnten nicht aus der Crossref-Datenbank abgerufen werden",
+  "valid-description": "Gültig",
+  "invalid-description": "Ungültig. Bitte überprüfen Sie den DOI auf Richtigkeit",
   "doi-not-found": "Der DOI wurde nicht gefunden. Mögliche Gründe sind:",
   "doi-incorrect": "Der DOI ist in Ihrer Quelle falsch",
   "doi-incorrect-extracted": "Der DOI wurde falsch extrahiert",
   "doi-not-activated": "Der DOI wurde noch nicht aktiviert",
-  "open-work": "Das Werk in einem neuen Tab öffnen",
-  "no-works-found": "Es konnten keine passenden Literaturangaben anhand der bereitgestellten DOI(s) gefunden werden. Bitte überprüfen Sie die DOI-Einträge auf Richtigkeit. Eine korrekte Formatierung und Vollständigkeit kann die Suchergebnisse verbessern.",
-  "no-match": "Wir konnten keine Übereinstimmung finden",
+  "open-work": "Werk öffnen",
   "connection-problem": "Es könnte ein Problem mit Ihrer Verbindung geben. Bitte überprüfen Sie Ihre Internetverbindung.",
-  "reload-page-auto-import": "Seite neu laden, um DOI(s) automatisch zu importieren",
-  "insert-dois": "DOI(s) einfügen",
+  "reload-page-auto-import": "Seite neu laden, um DOIs automatisch zu importieren, oder DOIs bzw. einen Text mit DOIs eingeben.",
+  "insert-dois": "DOIs oder einen Text mit DOIs eingeben",
   "english": "Englisch",
   "german": "Deutsch",
   "language": "Sprache",
@@ -29,19 +21,18 @@
   "valid": "Gültig",
   "invalid": "Ungültig",
   "report": "Bericht",
-  "copy-doi": "DOI kopieren",
-  "doi-copied": "DOI kopiert",
+  "copy-doi": "Kopieren",
+  "doi-copied": "Kopiert",
   "theme": "Design",
   "theme-option-description": "Wählen Sie das Design der Erweiterung",
   "light": "Hell",
   "dark": "Dunkel",
   "system": "System",
   "display": "Darstellung",
-  "reload-page": "Seite neu laden",
-  "no-valid-dois-were-found": "Es wurden keine gültigen DOIs gefunden",
+  "no-valid-dois-were-found": "Es wurden keine DOIs gefunden",
   "no-input-provided": "Keine Eingabe bereitgestellt",
-  "enter-dois": "Bitte geben Sie einen oder mehrere DOIs ein, um passende Literatur zu suchen.",
-  "check-dois": "Bitte überprüfen Sie das Format und stellen Sie die Richtigkeit sicher, um die Suchergebnisse zu verbessern.",
+  "enter-dois": "Bitte geben Sie einen oder mehrere DOIs ein, um deren Gültigkeit zu prüfen",
+  "check-dois": "Bitte überprüfen Sie das Format und stellen Sie die Richtigkeit sicher, um die Suchergebnisse zu verbessern",
   "upload-pdf": "PDF-Datei importieren",
   "enter-url": "URL eingeben",
   "invalid-url": "Ungültige URL",
