--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -29,10 +29,10 @@
   "dark": "Dark",
   "system": "System",
   "display": "Display",
-  "no-valid-dois-were-found": "No DOIs were found",
+  "no-valid-dois-were-found": "No DOIs found",
   "no-input-provided": "No Input Provided",
-  "enter-dois": "Please enter one or more DOIs to check their validity",
-  "check-dois": "Please check the format and ensure accuracy to improve search results",
+  "enter-dois": "Please enter DOIs, a text containing DOIs, or import a PDF containing DOIs to validate them",
+  "check-dois": "Please check your input and ensure it contains DOIs and is correctly formatted to improve search results",
   "upload-pdf": "Import PDF",
   "enter-url": "Enter URL",
   "invalid-url": "Invalid URL",
@@ -46,5 +46,6 @@
   "contact": "Contact",
   "contact-email": "For questions or issues, you can reach us via email",
   "view-demo": "View a demonstration of how to use the extension",
-  "help": "Help"
+  "help": "Help",
+  "sth-went-wrong": "Something went wrong"
 }
