refactor: replace checkbox with switch for AI extraction option and update localization strings

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -45,10 +45,11 @@
   "contact-email": "For questions or issues, you can reach us via email",
   "view-demo": "View a demonstration of how to use the extension",
   "help": "Help",
-  "sth-went-wrong": "Something went wrong",
   "ai-extraction": "AI Extraction",
   "ai-extraction-description": "When this option is enabled, Google Gemini is used to extract DOIs from your input text",
   "ai-extraction-description-info": "Please note that Google Gemini is a third-party service. Therefore, avoid entering sensitive or confidential data, as it may be sent to the service. For more information, click here:",
+  "learn-more": "Learn more",
+  "sth-went-wrong": "Something went wrong",
   "advanced": "Advanced",
   "test-api-key": "Test API Key",
   "api-key-valid": "Valid",
