refactor: rename AdvancedSettings to AiSettings and update related references

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -50,10 +50,10 @@
   "ai-extraction-description-info": "Please note that Google Gemini is a third-party service. Therefore, avoid entering sensitive or confidential data, as it may be sent to the service. For more information, click here:",
   "learn-more": "Learn more",
   "sth-went-wrong": "Something went wrong",
-  "advanced": "Advanced",
   "test-api-key": "Test API Key",
   "api-key-valid": "Valid",
   "api-key-invalid": "Invalid",
   "api-key-texfield-message": "Enter your API key here to use the AI extraction. If you don’t have an API key yet, you can",
-  "create-one-here": "create one here"
+  "create-one-here": "create one here",
+  "ai": "AI"
 }
