--- a/src/locales/de.json
+++ b/src/locales/de.json
@@ -50,10 +50,10 @@
   "ai-extraction-description": "Wenn diese Option aktiviert ist, wird Google Gemini verwendet,um DOIs aus dem Eingabetext zu extrahieren. Dadurch können DOIs auch dann zuverlässig erkannt werden, wenn sie nicht korrekt formatiert sind",
   "ai-extraction-description-info": "Bitte beachten Sie, dass Google Gemini ein Drittanbieter-Dienst ist. Vermeiden Sie es daher, sensible oder vertrauliche Daten einzugeben, da diese an den Dienst gesendet werden könnten. Für weitere Informationen klicken Sie hier: ",
   "learn-more": "Mehr erfahren",
-  "advanced": "Erweitert",
   "test-api-key": "API-Schlüssel testen",
   "api-key-valid": "Gültig",
   "api-key-invalid": "Ungültig",
   "api-key-texfield-message": "Geben Sie hier Ihren API-Schlüssel ein, um die KI-Extraktion zu verwenden. Falls Sie noch keinen API-Schlüssel haben, können Sie diesen",
-  "create-one-here": "hier erstellen"
+  "create-one-here": "hier erstellen",
+  "ai": "KI"
 }
