--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -55,5 +55,13 @@
   "api-key-invalid": "Invalid",
   "api-key-texfield-message": "Enter your API key here to use the AI extraction. If you don’t have an API key yet, you can",
   "create-one-here": "create one here",
-  "ai": "AI"
+  "ai": "AI",
+  "usage": "Usage",
+  "requests-per-day": "Requests per day",
+  "requests-per-day-description": "This is the limit of AI requests per day",
+  "resets-in": "Resets in",
+  "requests-per-minute": "Requests per minute",
+  "requests-per-minute-description": "This is the limit of AI requests per minute",
+  "tokens-per-minute": "Tokens per minute",
+  "tokens-per-minute-description": "This is the limit of AI tokens per minute"
 }
