--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -63,5 +63,8 @@
   "requests-per-minute": "Requests per minute",
   "requests-per-minute-description": "This is the limit of AI requests per minute",
   "tokens-per-minute": "Tokens per minute",
-  "tokens-per-minute-description": "This is the limit of AI tokens per minute"
+  "tokens-per-minute-description": "This is the limit of AI tokens per minute",
+  "hr": "hr",
+  "min": "min",
+  "sec": "sec"
 }
