refactor: enhance i18n integration and improve computed properties for titles and subtitles

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -66,5 +66,7 @@
   "tokens-per-minute-description": "This is the limit of AI tokens per minute",
   "hr": "hr",
   "min": "min",
-  "sec": "sec"
+  "sec": "sec",
+  "side-panel": "Side Panel",
+  "popup": "Popup"
 }
