--- a/src/locales/de.json
+++ b/src/locales/de.json
@@ -66,6 +66,8 @@
   "tokens-per-minute-description": "Dies ist das Limit der KI-Token pro Minute",
   "hr": "h",
   "min": "min",
-  "sec": "s"
+  "sec": "s",
+  "side-panel": "Seitenleiste",
+  "popup": "Popup"
 
 }
