feat: implement navigation bar and router for options page, enhance AppBar with nav icon

--- a/src/locales/de.json
+++ b/src/locales/de.json
@@ -68,6 +68,7 @@
   "min": "min",
   "sec": "s",
   "side-panel": "Seitenleiste",
-  "popup": "Popup"
+  "popup": "Popup",
+  "appearance": "Darstellung"
 
 }
