--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -68,5 +68,6 @@
   "min": "min",
   "sec": "sec",
   "side-panel": "Side Panel",
-  "popup": "Popup"
+  "popup": "Popup",
+  "appearance": "Appearance"
 }
