--- a/src/locales/de.json
+++ b/src/locales/de.json
@@ -39,7 +39,7 @@
   "display-mode-description": "Wählen Sie den Anzeigemodus der Erweiterung",
   "auto-import-dois-info": "Dies gilt nicht für im Browser geöffnete heruntergeladene PDFs; diese müssen manuell importiert werden",
   "website": "Webseite",
-  "visit-website": "Offizielle Webseite besuchen",
+  "visit-website": "Webseite besuchen",
   "view-github": "Projekt auf GitHub ansehen",
   "contact": "Kontakt",
   "contact-email": "Bei Fragen oder Problemen erreichst du uns per E-Mail",
@@ -69,6 +69,7 @@
   "sec": "s",
   "side-panel": "Seitenleiste",
   "popup": "Popup",
-  "appearance": "Darstellung"
+  "appearance": "Darstellung",
+  "source-code": "Quellcode"
 
 }
