refactor: update file input label and add new translations for PDF file

--- a/src/locales/de.json
+++ b/src/locales/de.json
@@ -75,5 +75,7 @@
   "help-description": "Erhalte Unterstützung und hilfreiche Ressourcen.",
   "general-description": "Verwalte grundlegende Einstellungen für die Funktionalität der Extension.",
   "language-description": "Stelle die Sprache ein.",
-  "about-description": "Erfahre mehr über die Extension."
+  "about-description": "Erfahre mehr über die Extension.",
+  "ai-description": "Aktiviere und konfiguriere KI-gestützte Funktionen.",
+  "pdf-file": "PDF-Datei"
 }
